# assessment-estimation

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: xgb_dem_pyppg_20250620.json
notebooks/: 01-initial-signal-exploration.ipynb  02-feature-extraction-pyppg.ipynb  03-demo-xgboost-model.ipynb  04-ppg-demo-xgboost-model.ipynb
reports/results/: dem_only.csv  dem_ppg.csv  test_predictions.csv  xgb_50runs.csv
src/: config.py  dataset.py  features.py
src/modeling/: predict.py  train.py
