[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Model to estimate vital signs"
authors = [
  { name = "Salil Apte" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    # Devtools
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "pre-commit",
    "pyarrow",
    "fastparquet",
    # Core ML / pipeline tools
    "numpy",
    "pandas",
    "scikit_learn",
    "xgboost",
    "polars",
    "scipy",
    "BaselineRemoval",
    "biosppy",
    # Hyperparameter tuning
    "optuna",
    # Visualization
    "plotly",
    "matplotlib",
    "seaborn",
    "pyppg==1.0.41",
    "joblib",
    "nbformat",
    "ipykernel",
    "dotmap",
]
requires-python = "~=3.10.0"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true


